{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 78,
  "lineage": "0b48e77b-3101-646d-e881-bf0d047cb6b9",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313240:vpc/vpc-09e6df90ee7a2f9cf",
            "cidr_block": "172.16.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e6c37fbd6b8ced56",
                "cidr_block": "172.16.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-08b31971a828f731b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09e6df90ee7a2f9cf",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09fda188a3f7c4a5c",
            "owner_id": "690248313240",
            "region": "us-east-1",
            "tags": {
              "Environment": "test",
              "Name": "go-mysql-api-vpc",
              "Purpose": "Secure Kubernetes Infrastructure",
              "Service": "go-mysql-api"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-011bb879970d27bfe",
            "arn": "arn:aws:ec2:us-east-1:690248313240:elastic-ip/eipalloc-011bb879970d27bfe",
            "domain": "vpc",
            "id": "eipalloc-011bb879970d27bfe",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-236-134-99.compute-1.amazonaws.com",
            "public_ip": "54.236.134.99",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "test",
              "Name": "nat-gateway-eip",
              "Purpose": "Elastic IP for NAT Gateway",
              "Service": "go-mysql-api"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "nat-gateway-eip",
              "Purpose": "Elastic IP for NAT Gateway",
              "Service": "go-mysql-api"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313240:internet-gateway/igw-03d9b8a865e9206c3",
            "id": "igw-03d9b8a865e9206c3",
            "owner_id": "690248313240",
            "region": "us-east-1",
            "tags": {
              "Environment": "test",
              "Name": "main-igw",
              "Purpose": "Internet Gateway for Public Subnets",
              "Service": "go-mysql-api"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "main-igw",
              "Purpose": "Internet Gateway for Public Subnets",
              "Service": "go-mysql-api"
            },
            "vpc_id": "vpc-09e6df90ee7a2f9cf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313240:route-table/rtb-0b2da21c0b15c2888",
            "id": "rtb-0b2da21c0b15c2888",
            "owner_id": "690248313240",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "test",
              "Name": "private-rt",
              "Purpose": "Private Route Table - No Internet Access",
              "Service": "go-mysql-api"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "private-rt",
              "Purpose": "Private Route Table - No Internet Access",
              "Service": "go-mysql-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e6df90ee7a2f9cf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313240:route-table/rtb-0db1349e64e3cb448",
            "id": "rtb-0db1349e64e3cb448",
            "owner_id": "690248313240",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03d9b8a865e9206c3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "test",
              "Name": "public-rt",
              "Purpose": "Public Route Table - Internet Gateway",
              "Service": "go-mysql-api"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "public-rt",
              "Purpose": "Public Route Table - Internet Gateway",
              "Service": "go-mysql-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e6df90ee7a2f9cf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee75b31a613b9ef3",
            "region": "us-east-1",
            "route_table_id": "rtb-0b2da21c0b15c2888",
            "subnet_id": "subnet-065b0b09fa63b9461"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a1d7f395d9ff49b",
            "region": "us-east-1",
            "route_table_id": "rtb-0db1349e64e3cb448",
            "subnet_id": "subnet-0b23569578b812c2a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313240:security-group/sg-02e80c1589b5eda8b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e80c1589b5eda8b",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/16",
                  "10.100.0.0/24"
                ],
                "description": "Go API port from VPN",
                "from_port": 8088,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8088
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16",
                  "10.100.0.0/24"
                ],
                "description": "Kubernetes API from VPN",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16",
                  "10.100.0.0/24"
                ],
                "description": "MySQL port from VPN",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16",
                  "10.100.0.0/24"
                ],
                "description": "SSH from VPN and VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "go-mysql-api-ec2-sg-20250902192829096400000006",
            "name_prefix": "go-mysql-api-ec2-sg-",
            "owner_id": "690248313240",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "Name": "go-mysql-api-ec2-sg",
              "Service": "go-mysql-api"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "go-mysql-api-ec2-sg",
              "Service": "go-mysql-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e6df90ee7a2f9cf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "690248313240",
            "id": "sg-02e80c1589b5eda8b",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jump_host_secure",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313240:security-group/sg-09283b599dc70ea4a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/16",
                  "10.100.0.0/24"
                ],
                "description": "Outbound to VPC and VPN only",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09283b599dc70ea4a",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/16",
                  "10.100.0.0/24"
                ],
                "description": "SSH from VPN clients and VPC internal",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jump-host-secure-20250902192829093500000004",
            "name_prefix": "jump-host-secure-",
            "owner_id": "690248313240",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "Name": "jump-host-secure-sg",
              "Purpose": "Secure Jump Host Access",
              "Security": "high",
              "Service": "go-mysql-api"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "jump-host-secure-sg",
              "Purpose": "Secure Jump Host Access",
              "Security": "high",
              "Service": "go-mysql-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e6df90ee7a2f9cf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "690248313240",
            "id": "sg-09283b599dc70ea4a",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wireguard_vpn_secure",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313240:security-group/sg-08d3980cb3e336910",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/16",
                  "10.100.0.0/24"
                ],
                "description": "Outbound to VPC and VPN clients only",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d3980cb3e336910",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.100.0.0/24"
                ],
                "description": "Go API from VPN clients",
                "from_port": 8088,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8088
              },
              {
                "cidr_blocks": [
                  "10.100.0.0/24"
                ],
                "description": "Kubernetes API from VPN clients",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "10.100.0.0/24"
                ],
                "description": "MySQL from VPN clients only",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "SSH from jump host/VPC only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "WireGuard VPN - Zero Trust (Private Only)",
                "from_port": 51820,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 51820
              }
            ],
            "name": "wireguard-vpn-ultra-secure-20250902192829095100000005",
            "name_prefix": "wireguard-vpn-ultra-secure-",
            "owner_id": "690248313240",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "Name": "wireguard-vpn-ultra-secure-sg",
              "Purpose": "Ultra-Secure WireGuard VPN",
              "Security": "maximum",
              "Service": "go-mysql-api"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "wireguard-vpn-ultra-secure-sg",
              "Purpose": "Ultra-Secure WireGuard VPN",
              "Security": "maximum",
              "Service": "go-mysql-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e6df90ee7a2f9cf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "690248313240",
            "id": "sg-08d3980cb3e336910",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313240:subnet/subnet-065b0b09fa63b9461",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.2.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065b0b09fa63b9461",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690248313240",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "test",
              "Name": "private",
              "Purpose": "Private Subnet for all instances",
              "Service": "go-mysql-api"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "private",
              "Purpose": "Private Subnet for all instances",
              "Service": "go-mysql-api"
            },
            "vpc_id": "vpc-09e6df90ee7a2f9cf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "690248313240",
            "id": "subnet-065b0b09fa63b9461",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313240:subnet/subnet-0b23569578b812c2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.1.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b23569578b812c2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "690248313240",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "test",
              "Name": "public",
              "Purpose": "Public Subnet for NAT Gateway",
              "Service": "go-mysql-api"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "public",
              "Purpose": "Public Subnet for NAT Gateway",
              "Service": "go-mysql-api"
            },
            "vpc_id": "vpc-09e6df90ee7a2f9cf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "690248313240",
            "id": "subnet-0b23569578b812c2a",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313240:vpc/vpc-09e6df90ee7a2f9cf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-065bf0cd3be074ca2",
            "default_route_table_id": "rtb-09fda188a3f7c4a5c",
            "default_security_group_id": "sg-0f2bf25104d3e8238",
            "dhcp_options_id": "dopt-08b31971a828f731b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09e6df90ee7a2f9cf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09fda188a3f7c4a5c",
            "owner_id": "690248313240",
            "region": "us-east-1",
            "tags": {
              "Environment": "test",
              "Name": "go-mysql-api-vpc",
              "Purpose": "Secure Kubernetes Infrastructure",
              "Service": "go-mysql-api"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "go-mysql-api-vpc",
              "Purpose": "Secure Kubernetes Infrastructure",
              "Service": "go-mysql-api"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}